--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Dog Breeds</string>
     <string name="action_settings">Settings</string>
-    <string name="dog_breeds_api_list_all">https://dog.ceo/api/breeds/list/all</string>
     <string name="dog_breeds_api_list_all_img">https://dog.ceo/api/breeds/list</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="back">BACK</string>
     <string name="see_breeds">View All Breeds</string>
+    <string name="view_images">View Breed Images</string>
 </resources>
