--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,13 @@
     <string name="action_settings">Settings</string>
     <string name="dog_breeds_api_list_all_img">https://dog.ceo/api/breeds/list</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="back">BACK</string>
     <string name="see_breeds">View All Breeds</string>
     <string name="view_images">View Breed Images</string>
     <string name="see_breed_images">View Breed Images</string>
+    <string name="refresh">REFRESH</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
