--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,9 @@
     <string name="view_images">View Breed Images</string>
     <string name="see_breed_images">View Breed Images</string>
     <string name="refresh">REFRESH</string>
-
-
+    <string name="back_home">Return Home</string>
+    <string name="back_breed_list">Return to Breed List</string>
+    <string name="breed_detail_activity">This is the Breed Detail Activity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
