--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+    <string name="test">TEST</string>
     <string name="app_name">Dog Breeds</string>
     <string name="action_settings">Settings</string>
     <string name="dog_breeds_api_list_all_img">https://dog.ceo/api/breeds/list</string>
