--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,9 @@
     <string name="see_breed_images">View Breed Images</string>
     <string name="refresh">REFRESH</string>
     <string name="back_home">Return Home</string>
-    <string name="back_breed_list">Return to Breed List</string>
+    <string name="back_breed_list">Back</string>
     <string name="breed_detail_activity">This is the Breed Detail Activity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="any_damn_dog_pic_TEST">https://images.dog.ceo/breeds/affenpinscher/n02110627_9822.jpg</string>
 
 </resources>
